# Generative-AI-Project

./: README.md
project/: pyproject.toml
project/project/: app2.py
